Author: Youchen Lee <kobe.lee@splashtop.com>
Date:	Mon Jan 17 16:39:03 2011 +0800
	- Support sending back reply message with non-chatterbot
	- Support dev mode to check current running folder first.

Author: Youchen Lee <kobe.lee@splashtop.com>
Date:   Thu Jan 13 16:57:21 2011 +0800
	- Refine pathes, prepare for installation.

Author: Youchen Lee <kobe.lee@splashtop.com>
Date:   Tue Jan 11 17:35:59 2011 +0800
	- Put message parser into DBus session (/org/opensplash/bot/langage/Parser)
	- Make splasbox-parser0 access to DBus directly.
	- DBus session now initialized in splashbox-daemon
	- Re-indent some scripts, change 8 spaces to tab.

Author: Youchen Lee <kobe.lee@splashtop.com>
Date:	Wed Jan  5 17:12:57 2011 +0800
	- SplashBox module.
	- Call check_job via DBus.
	- Rename scripts with splashbox- prefix.
	- Add echobot and docs about how to create a bot in HACKING.

Author: Youchen Lee <kobe.lee@splashtop.com>
Date:	Mon Jan  3 18:41:02 2011 +0800
	- Add action-type-creator helps to create new action.
	- Impliment new action "google" and "search"
	- Small improvement of parser-0 and splashbox-daemon.

Author: Youchen Lee <kobe.lee@splashtop.com>
Date:	Fri Dec 31 19:20:58 2010 +0800
	- Add quick-start.sh help to start the service.
	- Fix some path.

Author: Youchen Lee <kobe.lee@splashtop.com>
Date:   Thu Dec 30 17:13:45 2010 +0800
	- Add HACKING, ChangeLog and TODO
	- Pass unknown messages to the Chat Bot
	- Better log.
	- SplashBox Daemon can now trigger robots.
