@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<action version="20110125001">
+<time version="20110103001">
 	<meta>
 		<uuid>[uuid]</uuid>
 		<name>[name]</name>
@@ -8,16 +8,10 @@
 		<mail>[mail]</mail>
 		<create_date>[create_date]</create_date>
 		<update_date>[update_date]</update_date>
-		<next_run_date>[next_run_date]</next_run_date>
 		<version>[version]</version>
-		<robot>[robot]</robot>
-		<depend><depend>
+		<time_code>[time_code]</time_code>
+		<time_period>[time_period]</time_period>
+		<cycle>[cycle]</cycle>
+		<depend></depend>
 	</meta>
-	<data>
-		<uuid>{uuid}</uuid>
-		<user>{user}</user>
-		<create_date>{create_date}</create_date>
-		<update_date>{update_date}</update_date>
-		<raw>{raw}</raw>
-	</data>
-</action>
+</time>
