@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <time version="20110103001">
 	<meta>
-		<uuid>d4c84301-6fab-40b8-888f-0662d1814271</uuid>
-		<name>everyday</name>
-		<description>everyday</description>
+		<uuid>deadbf0c-4fe7-45c7-90a7-ff9594aeaf69</uuid>
+		<name>every week</name>
+		<description>every week</description>
 		<author>Youchen Lee</author>
 		<mail>kobe.lee@splashtop.com</mail>
-		<create_date>1295506476</create_date>
-		<update_date>1295506476</update_date>
+		<create_date>1295950413</create_date>
+		<update_date>1295950413</update_date>
 		<version>0.0.1</version>
 		<time_code>0</time_code>
-		<time_period>1d</time_period>
+		<time_period>7d</time_period>
 		<cycle>1</cycle>
 		<depend></depend>
 	</meta>
