@@ -1,1 +1,0 @@
-every_monday.xml
